fix: cannot open post page

--- a/src/i18n/locales/ja/common.json
+++ b/src/i18n/locales/ja/common.json
@@ -2,7 +2,7 @@
   "menu": {
     "posts": "ポスト",
     "til": "TIL",
-    "portfolio": "ポートフォリオ"
+    "portfolio": "Portfolio"
   },
   "post": {
     "readMore": "続きを読む",
