--- a/src/i18n/locales/ko/common.json
+++ b/src/i18n/locales/ko/common.json
@@ -14,8 +14,7 @@
   "language": {
     "ko": "한국어",
     "en": "English",
-    "ja": "日本語",
-    "select": "언어 선택"
+    "ja": "日本語"
   },
   "common": {
     "loading": "로딩 중...",
