--- a/src/i18n/locales/ko/common.json
+++ b/src/i18n/locales/ko/common.json
@@ -9,7 +9,27 @@
     "publishedOn": "게시일",
     "tags": "태그",
     "relatedPosts": "관련 게시물",
-    "comments": "댓글"
+    "comments": "댓글",
+    "notAvailableInLanguage": "이 포스트는 한국어로 작성되어 있지 않습니다.",
+    "viewInOtherLanguage": "다른 언어로 확인하시려면 아래 버튼을 클릭해 주세요.",
+    "newPost": "새 글 작성",
+    "title": "제목",
+    "description": "설명",
+    "content": "내용",
+    "createdAt": "작성일",
+    "save": "저장하기",
+    "saving": "저장 중...",
+    "saveSuccess": "포스트가 성공적으로 저장되었습니다.",
+    "saveError": "포스트 저장에 실패했습니다.",
+    "titleAndContentRequired": "제목과 내용은 필수입니다.",
+    "selectLanguage": "언어 선택",
+    "originalLanguage": "원본 언어",
+    "currentLanguage": "현재 편집 언어",
+    "translating": "번역 중",
+    "searchTags": "태그 검색...",
+    "newTag": "새 태그 입력...",
+    "selectedTags": "선택된 태그",
+    "hideTags": "태그 숨기기"
   },
   "language": {
     "ko": "한국어",
@@ -18,8 +38,14 @@
   },
   "common": {
     "loading": "로딩 중...",
-    "error": "오류가 발생했습니다",
+    "error": "오류가 발생했습니다.",
+    "retry": "다시 시도",
+    "close": "닫기",
     "notFound": "페이지를 찾을 수 없습니다",
-    "backToHome": "홈으로 돌아가기"
+    "backToHome": "홈으로 돌아가기",
+    "add": "추가",
+    "confirm": "확인",
+    "cancel": "취소",
+    "showMore": "더 보기"
   }
 }
