--- a/src/i18n/locales/ja/common.json
+++ b/src/i18n/locales/ja/common.json
@@ -2,7 +2,8 @@
   "menu": {
     "posts": "ポスト",
     "til": "TIL",
-    "portfolio": "Portfolio"
+    "portfolio": "Portfolio",
+    "translations": "翻訳管理"
   },
   "post": {
     "readMore": "続きを読む",
@@ -11,7 +12,21 @@
     "relatedPosts": "関連記事",
     "comments": "コメント",
     "notAvailableInLanguage": "この投稿は日本語で書かれていません。",
-    "viewInOtherLanguage": "他の言語で確認するには、下のボタンをクリックしてください。"
+    "viewInOtherLanguage": "他の言語で確認するには、下のボタンをクリックしてください。",
+    "edit": "編集",
+    "noTilPosts": "TIL投稿はまだありません。",
+    "title": "タイトル",
+    "description": "説明",
+    "content": "内容",
+    "save": "保存",
+    "saving": "保存中...",
+    "saveSuccess": "投稿が正常に保存されました。",
+    "saveError": "投稿の保存に失敗しました。",
+    "titleAndContentRequired": "タイトルと内容は必須です。",
+    "selectLanguage": "言語を選択",
+    "originalLanguage": "原語",
+    "currentLanguage": "現在の編集言語",
+    "translating": "翻訳中"
   },
   "language": {
     "ko": "한국어",
@@ -22,6 +37,22 @@
     "loading": "読み込み中...",
     "error": "エラーが発生しました",
     "notFound": "ページが見つかりません",
-    "backToHome": "ホームに戻る"
+    "backToHome": "ホームに戻る",
+    "add": "追加",
+    "confirm": "確認",
+    "cancel": "キャンセル",
+    "showMore": "もっと見る",
+    "retry": "再試行",
+    "close": "閉じる"
+  },
+  "translations": {
+    "complete": "完全",
+    "partial": "部分的",
+    "missing": "欠如",
+    "partialTranslations": "部分的に翻訳された投稿",
+    "missingTranslations": "翻訳が必要な投稿",
+    "noPartialTranslations": "部分的に翻訳された投稿はありません。",
+    "noMissingTranslations": "翻訳が必要な投稿はありません。",
+    "original": "原文"
   }
 }
