feat: add tag detail page

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -45,6 +45,10 @@
     "retry": "Retry",
     "close": "Close"
   },
+  "tag": {
+    "title": "Tag",
+    "noPosts": "No posts with tag '%s'"
+  },
   "translations": {
     "complete": "Complete",
     "partial": "Partial",
